# starcoin

./: Cargo.toml
chain/api/src/: message.rs  service.rs
chain/mock/src/: mock_chain.rs
chain/service/: Cargo.toml
chain/service/src/: chain_service.rs
chain/src/: chain.rs
chain/src/verifier/: mod.rs
chain/tests/: test_block_chain.rs  test_txn_info_and_proof.rs
cmd/miner_client/: Cargo.toml
commons/service-registry/src/: service_actor.rs
config/src/: available_port.rs
consensus/src/: consensus.rs
flexidag/: Cargo.toml
flexidag/dag/src/: blockdag.rs
flexidag/dag/tests/: tests.rs
flexidag/src/consensusdb/: consensus_relations.rs
flexidag/tests/: tests.rs
genesis/src/: lib.rs
jacktest/: Cargo.toml
jacktest/src/: main.rs
miner/: Cargo.toml
miner/src/create_block_template/: mod.rs
node/src/: lib.rs
state/api/src/: chain_state.rs  lib.rs
storage/src/: lib.rs  upgrade.rs
storage/src/block/: mod.rs
stratum/: Cargo.toml
stratum/src/: stratum.rs
sync/: Cargo.toml
sync/src/: sync.rs  verified_rpc_client.rs
sync/src/block_connector/: block_connector_service.rs  mod.rs  test_write_block_chain.rs  test_write_dag_block_chain.rs  write_block_chain.rs
sync/src/tasks/: block_sync_task.rs  inner_sync_task.rs  mock.rs  mod.rs  sync_dag_accumulator_task.rs  sync_dag_block_task.rs  sync_dag_full_task.rs  test_tools.rs  tests.rs  tests_dag.rs
sync/tests/: test_rpc_client.rs
txpool/api/src/: lib.rs
txpool/mock-service/src/: lib.rs
txpool/src/: tx_pool_service_impl.rs
types/src/: sync_status.rs
(+2 files in other folders)
