[package]
name = "jacktest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starcoin-sync = { workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-mock-service = { workspace = true }
starcoin-config = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-types = { workspace = true }
starcoin-crypto = { workspace = true }